Change colors of all pv maps

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.10.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.10.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G333.46_alma1_pvmap_rot]
 loc = 0 0
@@ -56,13 +61,13 @@ ylim = -60 -30 km/s
 hlines = -43.55 km/s
 rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
-spine_color = orange
+label = PA=${paval}${deg} - $$\alpha = -0.8$$
 
 [G333.46-0.16_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G333.46-0.16/c5c8/per_hot_core/alma1_pvmaps/G333.46-0.16_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA130.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -73,7 +78,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 5.40945722258099 solMass
 model_sd_mass = 0.5605674008863251 solMass
 model_amplitude = -6.927395072896697
@@ -96,7 +101,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -9.66389486517509
 model_x_0 = 0.034482758620689655
 model_alpha = 0.7755267109594368
@@ -122,6 +127,7 @@ ylim = -60 -30 km/s
 hlines = -43.55 km/s
 rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
+label = PA=${paval}${deg}
 
 [G333.46-0.16_alma1_infall]
 loc = 0 1
@@ -130,7 +136,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 5.40945722258099 solMass
 model_sd_mass = 0.5605674008863251 solMass
 model_amplitude = -6.927395072896697
@@ -146,7 +152,7 @@ function = piecewise_powerlaw
 xrange = -0.9900000000000792 0.9900000000000792 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 5.40945722258099 solMass
 model_amplitude = 6.927395072896697
 model_x_0 = 0.06896551724137931
