--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.13.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.13.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G335.579_alma3_pvmap_rot]
 loc = 0 0
@@ -54,13 +59,13 @@ pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.
 hlines = -53.1 km/s
 rms = 1.4 mJy/beam
 vmax = 16 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.64$$
 
 [G335.579-0.272_alma3_pvedge]
 loc = 0 0
 structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma3_pvmaps/G335.579-0.272_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA202.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 31.105563629100157 solMass
 model_amplitude = -16.611626147433906
 model_x_0 = 0.03076923076923077
@@ -94,7 +99,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -20.535897540705715
 model_x_0 = 0.03076923076923077
 model_alpha = 0.6416371428817473
@@ -119,7 +124,7 @@ xlim = -0.35 0.35 arcsec
 hlines = -53.1 km/s
 rms = 1.4 mJy/beam
 vmax = 16 mJy/beam
-spine_color = magenta
+label = PA=${paval}${deg} - Outflow
 
 [G335.579-0.272_alma3_infall]
 loc = 0 1
@@ -127,7 +132,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 31.105563629100157 solMass
 model_amplitude = -16.611626147433906
 model_x_0 = 0.06153846153846154
@@ -143,7 +148,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 31.105563629100157 solMass
 model_amplitude = 16.611626147433906
 model_x_0 = 0.06153846153846154
