--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.14.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.14.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G335.78_alma1_pvmap_rot]
 loc = 0 0
@@ -54,13 +59,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.
 hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.1$$
 
 [G335.78+0.17_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma1_pvmaps/G335.78+0.17_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA215.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 16.774137265204512 solMass
 model_amplitude = -12.198690347479223
 model_x_0 = 0.03125
@@ -94,7 +99,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -33.42169131873962
 model_x_0 = 0.03125
 model_alpha = 1.1077565644294396
@@ -118,7 +123,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.
 hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - Infall
 
 [G335.78+0.17_alma1_infall]
 loc = 0 1
@@ -126,7 +131,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 16.774137265204512 solMass
 model_amplitude = -12.198690347479223
 model_x_0 = 0.0625
@@ -142,7 +147,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 16.774137265204512 solMass
 model_amplitude = 12.198690347479223
 model_x_0 = 0.0625
