--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.19.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.19.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G35.13_alma1_pvmap_rot]
 loc = 0 0
@@ -54,13 +59,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${
 hlines = 35.93 km/s
 rms = 2.5 mJy/beam
 vmax = 56 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.46$$
 
 [G35.13-0.74_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma1_pvmaps/G35.13-0.74_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA45.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.48749999999998506 0.48749999999998506 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.75143302495276 solMass
 model_amplitude = -7.739111306374149
 model_x_0 = 0.045454545454545456
@@ -94,7 +99,7 @@ xrange = -0.48749999999998506 0.48749999999998506 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -7.469695960252546
 model_x_0 = 0.045454545454545456
 model_alpha = 0.46040172522710054
@@ -118,6 +123,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${
 hlines = 35.93 km/s
 rms = 2.5 mJy/beam
 vmax = 56 mJy/beam
+label = PA=${paval}${deg}
 
 [G35.13-0.74_alma1_infall]
 loc = 0 1
@@ -125,7 +131,7 @@ function = piecewise_powerlaw
 xrange = -0.48749999999998506 0.48749999999998506 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.75143302495276 solMass
 model_amplitude = -7.739111306374149
 model_x_0 = 0.09090909090909091
@@ -141,7 +147,7 @@ function = piecewise_powerlaw
 xrange = -0.48749999999998506 0.48749999999998506 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.75143302495276 solMass
 model_amplitude = 7.739111306374149
 model_x_0 = 0.09090909090909091
