--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [I18089_alma3_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
 vmax = 35 mJy/beam
-spine_color = orange
+label = PA=${paval}${deg} - $$\alpha = -0.80$$
 
 [IRAS_180891732_alma3_pvedge]
 loc = 0 0
 structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma3_pvmaps/IRAS_180891732_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA315.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.455751756722471 solMass
 model_amplitude = -8.132776374474883
 model_x_0 = 0.042735042735042736
@@ -95,7 +100,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -10.675471260352825
 model_x_0 = 0.042735042735042736
 model_alpha = 0.7991581577000633
@@ -120,6 +125,7 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
 vmax = 35 mJy/beam
+label = PA=${paval}${deg}
 
 [IRAS_180891732_alma3_infall]
 loc = 0 1
@@ -127,7 +133,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.455751756722471 solMass
 model_amplitude = -8.132776374474883
 model_x_0 = 0.08547008547008547
@@ -143,7 +149,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.455751756722471 solMass
 model_amplitude = 8.132776374474883
 model_x_0 = 0.08547008547008547
