--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,26 +23,32 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 almae = ${alma}
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [IRAS_181622048_alma1_pvmap_rot]
 loc = 0 0
@@ -56,13 +61,13 @@ xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
 vmax = 30 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.34$$
 
 [IRAS_181622048_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/IRAS_181622048/c5c8/per_hot_core/alma1_pvmaps/IRAS_181622048_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA-70.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -73,7 +78,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.908809183989916 solMass
 model_sd_mass = 0.6343612374554848 solMass
 model_amplitude = -10.278441756673729
@@ -96,7 +101,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -8.75981717721464
 model_x_0 = 0.07692307692307693
 model_alpha = 0.3411014797047861
@@ -121,6 +126,7 @@ xlim = -0.48 0.48 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
 vmax = 30 mJy/beam
+label = PA=${paval}${deg}
 
 [IRAS_181622048_alma1_infall]
 loc = 0 1
@@ -128,7 +134,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.908809183989916 solMass
 model_amplitude = -10.278441756673729
 model_x_0 = 0.15384615384615385
@@ -144,7 +150,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.908809183989916 solMass
 model_amplitude = 10.278441756673729
 model_x_0 = 0.15384615384615385
