--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.28.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.28.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,43 +23,49 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [NGC6334I_alma4_pvmap_rot]
 loc = 0 0
 source = NGC6334I
 alma = 4
-almae = 3
+almae = 4
 paval = 20
 pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
 hlines = -6.92 km/s
 rms = 1.5 mJy/beam
 vmax = 50 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.3$$
 
 [NGC6334I_alma4_pvedge]
 loc = 0 0
 structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma4_pvmaps/NGC6334I_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA20.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.321287015550672 solMass
 model_sd_mass = 1.2651733039128334 solMass
 model_amplitude = -8.059105246022634
@@ -94,7 +99,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -23.753747130049224
 model_x_0 = 0.07407407407407407
 model_alpha = 1.3305393175883473
@@ -112,12 +117,13 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 loc = 0 1
 source = NGC6334I
 alma = 4
-almae = 3
+almae = 4
 paval = 110
 pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
 hlines = -6.92 km/s
 rms = 1.5 mJy/beam
 vmax = 50 mJy/beam
+label = PA=${paval}${deg}
 
 [NGC6334I_alma4_infall]
 loc = 0 1
@@ -125,7 +131,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.321287015550672 solMass
 model_amplitude = -8.059105246022634
 model_x_0 = 0.14814814814814814
@@ -141,7 +147,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.321287015550672 solMass
 model_amplitude = 8.059105246022634
 model_x_0 = 0.14814814814814814
