--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.5.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.5.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G11.92_alma3_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ xlim = -0.35 0.42 arcsec
 hlines = 35.7 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.58$$
 
 [G11.92-0.61_alma3_pvedge]
 loc = 0 0
 structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma3_pvmaps/G11.92-0.61_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA225.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.001263295019477 solMass
 model_amplitude = -9.87903195940451
 model_x_0 = 0.02967359050445104
@@ -95,7 +100,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -10.986120156799391
 model_x_0 = 0.02967359050445104
 model_alpha = 0.5843649913043656
@@ -120,6 +125,7 @@ xlim = -0.35 0.35 arcsec
 hlines = 37 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
+label = PA=${paval}${deg}
 
 [G11.92-0.61_alma3_infall]
 loc = 0 1
@@ -128,7 +134,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.001263295019477 solMass
 model_amplitude = -9.87903195940451
 model_x_0 = 0.059347181
@@ -144,7 +150,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.001263295019477 solMass
 model_amplitude = 9.87903195940451
 model_x_0 = 0.05934718100890208
