--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.7.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.7.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G333.12_alma1_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.56$$
 
 [G333.12-0.56_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G333.12-0.56/c5c8/per_hot_core/alma1_pvmaps/G333.12-0.56_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA135.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 15.20371956574227 solMass
 model_amplitude = -11.61363135058741
 model_x_0 = 0.030303030303030304
@@ -95,7 +100,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -12.454647070207193
 model_x_0 = 0.030303030303030304
 model_alpha = 0.5562764120942513
@@ -120,6 +125,7 @@ xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
+label = PA=${paval}${deg}
 
 [G333.12-0.56_alma1_infall]
 loc = 0 1
@@ -128,7 +134,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 15.20371956574227 solMass
 model_amplitude = 11.61363135058741
 model_x_0 = 0.060606060606060608
@@ -144,7 +150,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 15.20371956574227 solMass
 model_amplitude = 11.61363135058741
 model_x_0 = 0.06060606060606061
