--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -4,7 +4,6 @@ nrows = 1
 sharex = false
 sharey = false
 styles = maps lipari_r aspect_auto 
-#styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -29,15 +28,11 @@ yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = k
 enumerate = false
-#label = ${source} ALMAe${almae} PA=${paval}${deg}
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-#vlines_color = #35ff2c
 vlines_color = #adacac
 hlines_linestyle = --
-#hlines_color = #35ff2c
 hlines_color = #adacac
 self_contours = true
 contour_linewidth = 0.5
@@ -47,7 +42,9 @@ vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
 class = #2f52f0
+keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
 label_font_color = ${class}
@@ -62,18 +59,15 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
-#spine_color = deepskyblue
-label = PA=${paval}${deg} $$\alpha = 1.2$$
+label = PA=${paval}${deg} - $$\alpha = -1.2$$
 
 [G10.62-0.38_alma1a_pvedge]
 loc = 0 0
 structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1a_pvmaps/G10.62-0.38_alma1a_rotation.CH3CN_K3.ra272.61920_dec-19.93041.PA0.edge.dat
 marker = o
-#color = #46eff2
 color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
-legend = Edge
 
 [G10.62-0.38_alma1a_keplerian_fit]
 loc = 0 0
@@ -82,9 +76,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #ef2d56
-#color = #eb5252
-legend = Keplerian
+color = ${keplerian} 
 model_mass = 15.839053466606627 solMass
 model_amplitude = -11.853803492250195
 model_x_0 = 0.020202020202020204
@@ -107,7 +99,6 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-#color = #adacac
 color = ${class}
 model_amplitude = -35.68181659376357
 model_x_0 = 0.020202020202020204
@@ -133,7 +124,6 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
 label = PA=${paval}${deg} - Infall
-#spine_color = red
 
 [G10.62-0.38_alma1a_infall]
 loc = 0 1
@@ -142,7 +132,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 15.839053466606627 solMass
 model_amplitude = -11.853803492250195
 model_x_0 = 0.040404040404040408
@@ -158,7 +148,7 @@ function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 15.839053466606627 solMass
 model_amplitude = 11.853803492250195
 model_x_0 = 0.04040404040404041
