--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.12.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.12.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G335.579_alma1_pvmap_rot]
 loc = 0 0
@@ -54,13 +59,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.
 hlines = -46.9 km/s
 rms = 1.4 mJy/beam
 vmax = 25 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.62$$
 
 [G335.579-0.272_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma1_pvmaps/G335.579-0.272_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA150.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.585244955167229 solMass
 model_amplitude = -8.20309830533521
 model_x_0 = 0.03076923076923077
@@ -94,7 +99,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -9.40081047583402
 model_x_0 = 0.03076923076923077
 model_alpha = 0.6195567304406051
@@ -118,7 +123,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.
 hlines = -46.9 km/s
 rms = 1.4 mJy/beam
 vmax = 25 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - Infall
 
 [G335.579-0.272_alma1_infall]
 loc = 0 1
@@ -126,7 +131,7 @@ function = piecewise_powerlaw
 xrange = -0.9900000000000792 0.9900000000000792 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.585244955167229 solMass
 model_amplitude = -8.20309830533521
 model_x_0 = 0.06153846153846154
@@ -142,7 +147,7 @@ function = piecewise_powerlaw
 xrange = -0.9900000000000792 0.9900000000000792 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 7.585244955167229 solMass
 model_amplitude = 8.20309830533521
 model_x_0 = 0.06153846153846154
