--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #363537
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G336_alma1_pvmap_rot]
 loc = 0 0
@@ -54,12 +59,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.
 hlines = -47.2 km/s
 rms = 1.7 mJy/beam
 vmax = 60 mJy/beam
+label = PA=${paval}${deg} - $$\alpha = -2.1$$
 
 [G336.01-0.82_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G336.01-0.82/c5c8/per_hot_core/alma1_pvmaps/G336.01-0.82_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA125.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -70,7 +76,7 @@ xrange = -0.48950000000007116 0.48950000000007116 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 14.299712876295894 solMass
 model_amplitude = -11.263069647401139
 model_x_0 = 0.03225806451612903
@@ -93,7 +99,7 @@ xrange = -0.48950000000007116 0.48950000000007116 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -184.05211236432362
 model_x_0 = 0.03225806451612903
 model_alpha = 2.0942879803273646
@@ -117,6 +123,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.
 hlines = -47.2 km/s
 rms = 1.7 mJy/beam
 vmax = 60 mJy/beam
+label = PA=${paval}${deg}
 
 [G336.01-0.82_alma1_infall]
 loc = 0 1
@@ -124,7 +131,7 @@ function = piecewise_powerlaw
 xrange = -0.48950000000007116 0.48950000000007116 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 14.299712876295894 solMass
 model_amplitude = -11.263069647401139
 model_x_0 = 0.06451612903225806
@@ -140,7 +147,7 @@ function = piecewise_powerlaw
 xrange = -0.48950000000007116 0.48950000000007116 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 14.299712876295894 solMass
 model_amplitude = 11.263069647401139
 model_x_0 = 0.06451612903225806
