--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.18.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.18.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G35.03_alma1_pvmap_rot]
 loc = 0 0
@@ -56,13 +61,13 @@ xlim = -0.55 0.55 arcsec
 hlines = 45.94 km/s
 rms = 1.9 mJy/beam
 vmax = 41 mJy/beam
-spine_color = orange
+label = PA=${paval}${deg} - $$\alpha = -0.7$$
 
 [G35.03+0.35_A_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G35.03+0.35_A/c5c8/per_hot_core/alma1_pvmaps/G35.03+0.35_A_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA310.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -73,7 +78,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 20.071282619834534 solMass
 model_amplitude = -13.343835335574317
 model_x_0 = 0.04310344827586207
@@ -96,7 +101,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -18.413754787280524
 model_x_0 = 0.04310344827586207
 model_alpha = 0.7199416450495963
@@ -122,7 +127,7 @@ xlim = -0.55 0.55 arcsec
 hlines = 45.94 km/s
 rms = 1.9 mJy/beam
 vmax = 41 mJy/beam
-spine_color = magenta
+label = PA=${paval}${deg} - Outflow
 
 [G35.03+0.35_A_alma1_infall]
 loc = 0 1
@@ -130,7 +135,7 @@ function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 20.071282619834534 solMass
 model_amplitude = -13.343835335574317
 model_x_0 = 0.08620689655172414
@@ -146,7 +151,7 @@ function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 20.071282619834534 solMass
 model_amplitude = 13.343835335574317
 model_x_0 = 0.08620689655172414
