--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
+styles = maps lipari_r aspect_auto
 #styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
@@ -24,25 +24,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+vlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G10_alma1c_pvmap_rot]
 loc = 0 0
@@ -54,13 +60,13 @@ pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.P
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 25 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.0$$
 
 [G10.62-0.38_alma1c_pvedge]
 loc = 0 0
 structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1c_pvmaps/G10.62-0.38_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA180.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +77,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 4.960438860257873 solMass
 model_amplitude = -6.633659282336722
 model_x_0 = 0.020202020202020204
@@ -94,7 +100,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class} 
 model_amplitude = -13.704302450045676
 model_x_0 = 0.020202020202020204
 model_alpha = 0.9717888344142968
@@ -118,7 +124,7 @@ pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.P
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
-spine_color = magenta
+label = PA=${paval}${deg} - Outflow
 
 [G10.62-0.38_alma1c_infall]
 loc = 0 1
@@ -127,7 +133,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 4.960438860257873 solMass
 model_amplitude = -6.633659282336722
 model_x_0 = 0.040404040404040408
@@ -143,7 +149,7 @@ function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 4.960438860257873 solMass
 model_amplitude = 6.633659282336722
 model_x_0 = 0.04040404040404041
