--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.20.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.20.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
-hlines_linestyle = --
-hlines_color = #35ff2c
 self_contours = true
+vlines_color = #adacac
+hlines_linestyle = --
+hlines_color = #adacac
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G35.13_alma2_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ xlim = -0.25 0.23 arcsec
 hlines = 34.39 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.0$$
 
 [G35.13-0.74_alma2_pvedge]
 loc = 0 0
 structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma2_pvmaps/G35.13-0.74_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA75.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.48749999999998506 0.48749999999998506 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 2.7193722611889983 solMass
 model_amplitude = -4.911650348614933
 model_x_0 = 0.045454545454545456
@@ -95,7 +100,7 @@ xrange = -0.48749999999998506 0.48749999999998506 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -5.919528928445707
 model_x_0 = 0.045454545454545456
 model_alpha = 0.966285077348988
@@ -120,6 +125,7 @@ xlim = -0.23 0.23 arcsec
 hlines = 34.39 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
+label = PA=${paval}${deg}
 
 [G35.13-0.74_alma2_infall]
 loc = 0 1
@@ -127,7 +133,7 @@ function = piecewise_powerlaw
 xrange = -0.48749999999998506 0.48749999999998506 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 2.7193722611889983 solMass
 model_amplitude = -4.911650348614933
 model_x_0 = 0.09090909090909091
@@ -143,7 +149,7 @@ function = piecewise_powerlaw
 xrange = -0.48749999999998506 0.48749999999998506 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 2.7193722611889983 solMass
 model_amplitude = 4.911650348614933
 model_x_0 = 0.09090909090909091
