--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G35.20_alma1_pvmap_rot]
 loc = 0 0
@@ -56,13 +61,13 @@ xlim = -0.52 0.52 arcsec
 hlines = 32.11 km/s
 rms = 2.5 mJy/beam
 vmax = 86 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.2$$
 
 [G35.20-0.74_N_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G35.20-0.74_N/c5c8/per_hot_core/alma1_pvmaps/G35.20-0.74_N_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA-10.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -73,7 +78,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 3.87439880274262 solMass
 model_amplitude = -5.86266760723382
 model_x_0 = 0.045662100456621
@@ -96,7 +101,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -14.54962691386968
 model_x_0 = 0.045662100456621
 model_alpha = 1.1447219169301803
@@ -122,6 +127,7 @@ xlim = -0.52 0.52 arcsec
 hlines = 32.11 km/s
 rms = 2.5 mJy/beam
 vmax = 86 mJy/beam
+label = PA=${paval}${deg}
 
 [G35.20-0.74_N_alma1_infall]
 loc = 0 1
@@ -129,7 +135,7 @@ function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 3.87439880274262 solMass
 model_amplitude = -5.86266760723382
 model_x_0 = 0.091324200913242
@@ -145,7 +151,7 @@ function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 3.87439880274262 solMass
 model_amplitude = 5.86266760723382
 model_x_0 = 0.091324200913242
