--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,26 +23,32 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [I18089_alma1_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
 vmax = 52 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.48$$
 
 [IRAS_180891732_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma1_pvmaps/IRAS_180891732_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA245.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 27.57751948015581 solMass
 model_amplitude = -15.641223112117661
 model_x_0 = 0.042735042735042736
@@ -95,7 +100,7 @@ xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -15.289971516231018
 model_x_0 = 0.042735042735042736
 model_alpha = 0.4842850674151176
@@ -119,7 +124,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
 vmax = 52 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - Infall
 
 [IRAS_180891732_alma1_infall]
 loc = 0 1
@@ -127,7 +132,7 @@ function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 27.57751948015581 solMass
 model_amplitude = -15.641223112117661
 model_x_0 = 0.08547008547008547
@@ -143,7 +148,7 @@ function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 27.57751948015581 solMass
 model_amplitude = 15.641223112117661
 model_x_0 = 0.08547008547008547
