--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [I18182_alma3_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
 vmax = 40 mJy/beam
-spine_color = orange
+label = PA=${paval}${deg} - $$\alpha = -0.71$$
 
 [IRAS_18182-1433_alma3_pvedge]
 loc = 0 0
 structured_array = ../results/IRAS_18182-1433/c5c8/per_hot_core/alma3_pvmaps/IRAS_18182-1433_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA10.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 17.27677520629488 solMass
 model_amplitude = -12.380108539151216
 model_x_0 = 0.027932960893854747
@@ -95,7 +100,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -17.164808842139003
 model_x_0 = 0.027932960893854747
 model_alpha = 0.7093529553250641
@@ -120,7 +125,7 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
 vmax = 40 mJy/beam
-spine_color = magenta
+label = PA=${paval}${deg} - Outflow
 
 [IRAS_18182-1433_alma3_infall]
 loc = 0 1
@@ -128,7 +133,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 17.27677520629488 solMass
 model_amplitude = -12.380108539151216
 model_x_0 = 0.055865921787709494
@@ -144,7 +149,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 17.27677520629488 solMass
 model_amplitude = 12.380108539151216
 model_x_0 = 0.055865921787709494
