--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,26 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 almae = ${alma}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #ed7d3a
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [NGC6334I_alma1_pvmap_rot]
 loc = 0 0
@@ -54,13 +58,13 @@ pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${
 hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - $$\alpha = -0.6$$
 
 [NGC6334I_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma1_pvmaps/NGC6334I_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA60.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +75,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 8.67984271557738 solMass
 model_sd_mass = 0.8894660145924915 solMass
 model_amplitude = -8.775038665180102
@@ -94,7 +98,7 @@ xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -9.661298770429125
 model_x_0 = 0.07407407407407407
 model_alpha = 0.5745542962356066
@@ -117,6 +121,7 @@ pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${
 hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
+label = PA=${paval}${deg}
 
 [NGC6334I_alma1_infall]
 loc = 0 1
@@ -124,7 +129,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 8.67984271557738 solMass
 model_amplitude = -8.775038665180102
 model_x_0 = 0.14814814814814814
@@ -140,7 +145,7 @@ function = piecewise_powerlaw
 xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 8.67984271557738 solMass
 model_amplitude = 8.775038665180102
 model_x_0 = 0.14814814814814814
