--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #363537
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G11.1_pvmap_rot]
 loc = 0 0
@@ -56,12 +61,13 @@ ylim = 20 40 km/s
 hlines = 31.85 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
+label = PA=${paval}${deg} - $$\alpha = -3$$
 
 [G11.1-0.12_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G11.1-0.12/c5c8/per_hot_core/alma1_pvmaps/G11.1-0.12_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA-65.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +78,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.930846521069932 solMass
 model_amplitude = -7.84126717657039
 model_x_0 = 0.03333333333333333
@@ -95,7 +101,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -116.11834488021854
 model_x_0 = 0.03333333333333333
 model_alpha = 2.6646266569674615
@@ -129,7 +135,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.930846521069932 solMass
 model_amplitude = -7.84126717657039
 model_x_0 = 0.06666666666666666
@@ -145,7 +151,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.930846521069932 solMass
 model_amplitude = 7.84126717657039
 model_x_0 = 0.06666666666666667
