--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.6.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.6.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G29_pvmap_rot]
 loc = 0 0
@@ -54,13 +59,13 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.P
 hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
-spine_color = orange
+label = PA=${paval}${deg} - $$\alpha = -0.77$$
 
 [G29.96-0.02_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G29.96-0.02/c5c8/per_hot_core/alma1_pvmaps/G29.96-0.02_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA155.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -71,7 +76,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 44.71755778216386 solMass
 model_amplitude = -19.917377254580362
 model_x_0 = 0.019011406844106463
@@ -94,7 +99,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -36.82099903088366
 model_x_0 = 0.019011406844106463
 model_alpha = 0.771726696889174
@@ -118,7 +123,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.P
 hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
-spine_color = red
+label = PA=${paval}${deg} - Infall
 
 [G29.96-0.02_alma1_infall]
 loc = 0 1
@@ -127,7 +132,7 @@ xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 44.71755778216386 solMass
 model_amplitude = -19.917377254580362
 model_x_0 = 0.038022813
@@ -143,7 +148,7 @@ function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 44.71755778216386 solMass
 model_amplitude = 19.917377254580362
 model_x_0 = 0.03802281368821293
