--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,45 +23,50 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G333.23_alma3_pvmap_rot]
 loc = 0 0
 source = G333.23-0.06
 alma = 3
 almae = 5
-#label = ${source} ALMAe${almae}a PA=${paval}${deg}
 paval = 220
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 xlim = -0.4 0.4 arcsec
 hlines = -87.04 km/s
 rms = 1.1 mJy/beam
 vmax = 22 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -0.86$$
 
 [G333.23-0.06_alma3_pvedge]
 loc = 0 0
 structured_array = ../results/G333.23-0.06/c5c8/per_hot_core/alma3_pvmaps/G333.23-0.06_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA220.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -73,7 +77,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.40865048432779 solMass
 model_amplitude = -10.06028417786803
 model_x_0 = 0.019230769230769232
@@ -96,7 +100,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -17.777338785559206
 model_x_0 = 0.019230769230769232
 model_alpha = 0.8643038392815027
@@ -116,12 +120,12 @@ source = G333.23-0.06
 alma = 3
 almae = 5
 paval = 310
-#label = ${source} ALMA${alma}a PA=${paval}${deg}
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 xlim = -0.32 0.32 arcsec
 hlines = -87.04 km/s
 rms = 1.1 mJy/beam
 vmax = 22 mJy/beam
+label = PA=${paval}${deg}
 
 [G333.23-0.06_alma3_infall]
 loc = 0 1
@@ -130,7 +134,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.40865048432779 solMass
 model_amplitude = -10.06028417786803
 model_x_0 = 0.038461538
@@ -146,7 +150,7 @@ function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 11.40865048432779 solMass
 model_amplitude = 10.06028417786803
 model_x_0 = 0.038461538461538464
