--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
@@ -3,8 +3,7 @@ ncols = 2
 nrows = 1
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -24,25 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
 enumerate = false
-label = PA=${paval}${deg}
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #2f52f0
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
 
 [G333.23_alma3b_pvmap_rot]
 loc = 0 0
@@ -55,13 +60,13 @@ xlim = -0.38 0.38 arcsec
 hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
-spine_color = deepskyblue
+label = PA=${paval}${deg} - $$\alpha = -1.2$$
 
 [G333.23-0.06_alma3b_pvedge]
 loc = 0 0
 structured_array = ../results/G333.23-0.06/c5c8/per_hot_core/alma3b_pvmaps/G333.23-0.06_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA125.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -72,7 +77,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.556310718704397 solMass
 model_sd_mass = 1.4031098383515768 solMass
 model_amplitude = -7.62645785789361
@@ -95,7 +100,7 @@ xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -20.26791248231278
 model_x_0 = 0.019230769230769232
 model_alpha = 1.2408100213209752
@@ -120,6 +125,7 @@ xlim = -0.32 0.32 arcsec
 hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
+label = PA=${paval}${deg}
 
 [G333.23-0.06_alma3b_infall]
 loc = 0 1
@@ -127,7 +133,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.556310718704397 solMass
 model_amplitude = -7.62645785789361
 model_x_0 = 0.038461538461538464
@@ -143,7 +149,7 @@ function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian} 
 model_mass = 6.556310718704397 solMass
 model_amplitude = 7.62645785789361
 model_x_0 = 0.038461538461538464
